--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body{
 
 #navbar-logo{
     float: left;
-    height: 5vw;
+    height: 4vw;
 }
 
 #navbar-links {
@@ -47,7 +47,7 @@ body{
 #navbar-links p{
     float: left;
     padding: 1vw 0;
-    font-size: 1.8vw;
+    font-size: 1.4vw;
     font-weight: 700;
     margin: 0px 1vw;
     color: var(--primary);
@@ -55,28 +55,35 @@ body{
 
 .vd-main{
     width: 100%;
-    margin-top: 8%;
-    margin-bottom: 30vw;
+    /* margin-top: 8%; */
+    /* margin-bottom: 30vw; */
     padding: 5vw;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
 }
 
 .main1{
-    margin-top: 2vw;
+    margin-top: 0vw;
     width: 50%;
     float: left;
 }
 
 .main2{
-    position: relative;
-    top: -8vw;
+    /* position: relative;
+    top: -8vw; */
+    padding: 2vw;
     width: 50%;
     float: right;
 }
 
 .main-txt{
     color: var(--primary);
-    font-size: 6vw;
+    font-size: 5vw;
     font-weight: 700;
+    margin-bottom: 2vw;
 }
 
 .take-tour{
@@ -84,7 +91,7 @@ body{
     color: white;
     font-size: 1.5vw;
     font-weight: bold;
-    padding: 0.8vw 1vw;
+    padding: 0.8vw 0.9vw;
     border: none;
     border-radius: 50px;
 }
@@ -96,17 +103,22 @@ body{
 }
 
 .vd-head{
-    margin: 4vw;
-    margin-bottom: 6vw;
+    height: 100%;
+    /* margin: 4vw; */
+    /* margin-bottom: 6vw; */
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
 }
 .head-txt{
-    font-size: 5vw;
+    font-size: 4vw;
     font-weight: 700;
     margin-bottom: 4vw;
 }
 
 .head-sub{
-    font-size: 2.4vw;
+    font-size: 2.2vw;
     font-weight: 600;
 }
 
@@ -122,10 +134,10 @@ body{
 
 .vd-roots{
     background-image: url(./assets/our-root.png);
-    height: 70vw;
+    height: 60vw;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 120vw 75vw;
+    background-size: 120vw 60vw;
     overflow: hidden;
 }
 
@@ -135,13 +147,13 @@ body{
 }
 
 .roots-txt{
-    font-size: 5vw;
+    font-size: 4vw;
     font-weight: 700;
     margin-bottom: 4vw;
 }
 
 .roots-sub{
-    font-size: 2vw;
+    font-size: 1.8vw;
     font-weight: 600;
     margin-bottom: 4vw;
 }
@@ -150,21 +162,21 @@ body{
     background-color: white;
     font-size: 1.5vw;
     font-weight: bold;
-    padding: 0.8vw 1vw;
+    padding: 0.8vw 0.9vw;
     border: none;
     border-radius: 50px;
 }
 
 .vd-services{
     width: 100%;
-    padding: 4vw;
+    padding: 2vw;
 }
 
 .serv-illus{
     width: 30%;
     float: left;
     padding: 1vw;
-    margin-top: 4vw;
+    margin-top: 0vw;
 }
 
 .serv-illus img{
@@ -180,21 +192,21 @@ body{
 
 
 .serv-txt{
-    font-size: 5vw;
+    font-size: 3.8vw;
     font-weight: 700;
-    margin-bottom: 4vw;
+    margin-bottom: 3vw;
 }
 
 .serv-sub{
     padding-left: 7vw;
-    font-size: 2vw;
+    font-size: 1.4vw;
     font-weight: 600;
     margin-bottom: 4vw;
 }
 
 .vd-servs{
     width: 100%;
-    margin: 2vw 0vw;
+    margin: 3vw 0vw;
 }
 
 .serv-card{
@@ -232,15 +244,14 @@ body{
 }
 
 .client-txt{
-    font-size: 5vw;
+    font-size: 4vw;
     font-weight: 700;
     margin-bottom: 2vw;
 }
 
 .client-sub{
-    font-size: 2vw;
+    font-size: 1.8vw;
     font-weight: 600;
-    margin-bottom: 2vw;
 }
 
 .client-cards{
@@ -261,7 +272,14 @@ body{
 .vd-card img{
     max-width: 100%;
     max-height: 100%;
+    transition: .5s;
 }
+
+
+.vd-card img:hover{
+    filter: invert(100%);
+}
+
 
 .vd-reviews{
     width: 100%;
@@ -287,7 +305,7 @@ body{
 }
 
 .review-txt{
-    font-size: 5vw;
+    font-size: 4vw;
     font-weight: 700;
 }
 
@@ -362,7 +380,7 @@ body{
 }
 
 .memo-txt{
-    font-size: 5vw;
+    font-size: 4vw;
     font-weight: 700;
 }
 
