--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body{
 
 .main-txt{
     color: var(--primary);
-    font-size: 5em;
+    font-size: 5vw;
     font-weight: 700;
     margin-bottom: 2vw;
 }
