--- a/style.css
+++ b/style.css
@@ -57,6 +57,12 @@ body{
     font-weight: 700;
     margin: 0px 1vw;
     color: var(--primary);
+    transition: 1s;
+}
+
+#navbar-links a{
+        color: inherit;
+        text-decoration: none;
 }
 
 .vd-main{
