--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
 .ac{
     color: var(--accent);
 }
+
 .vd-navbar{
     display: inline-block;
     z-index: 10000;
@@ -64,7 +65,7 @@ body{
         color: inherit;
         text-decoration: none;
 }
-
+/*------  HOME PAGE -------*/
 .vd-main{
     width: 100%;
     position: relative;
@@ -477,6 +478,9 @@ body{
     border: none;
     border-radius: 50px;
 }
+
+/*------  HOME PAGE -------*/
+/*------  SERVICES PAGE -------*/
 
 .vd-footer{
     background-color: var(--primary);
