--- a/style.css
+++ b/style.css
@@ -102,7 +102,6 @@ body{
 }
 
 .main-txt{
-    color: var(--primary);
     font-size: 5vw;
     font-weight: 700;
     margin-bottom: 2vw;
@@ -480,6 +479,10 @@ body{
 }
 
 /*------  HOME PAGE -------*/
+/*------  SERVICES PAGE -------*/
+
+
+
 /*------  SERVICES PAGE -------*/
 
 .vd-footer{
