--- a/style.css
+++ b/style.css
@@ -481,6 +481,67 @@ body{
 /*------  HOME PAGE -------*/
 /*------  SERVICES PAGE -------*/
 
+.s-main{
+    width: 100%;
+    padding: 4vw;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.smain1{
+    display: flex;
+    flex-flow: column;
+    padding: 3vw;
+    margin-top: -8vw;
+    width: 50%;
+    float: left;
+}
+
+.smain2{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    padding: 3vw;
+    width: 40%;
+    float: right;
+}
+
+.smain-illus{
+    float: right;
+    max-width: 100%;
+    max-height: 100%;
+}
+.smain2-shadow{
+    position: relative;
+    top: 2vw;
+    width: 35vw;
+    filter: blur(10px);
+}
+
+.smain-txt{
+    font-size: 5vw;
+    font-weight: 700;
+    margin-bottom: 2vw;
+}
+
+.ssub{
+    font-size: 1.4vw;
+    font-weight: 400;
+}
+
+.view-all{
+    background-color: var(--secondary);
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 14px;
+    width: 160px;
+    border: none;
+    border-radius: 50px;
+}
 
 
 /*------  SERVICES PAGE -------*/
