--- a/style.css
+++ b/style.css
@@ -545,7 +545,219 @@ body{
 
 
 /*------  SERVICES PAGE -------*/
+/*------  About -----*/
 
+
+.vd-roots{
+    background-color: #02AFBE;
+    height: 30vw;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2vw;
+    margin: 100px 0;
+    box-shadow: 0px 0px 20px black;
+}
+
+.roots-cnt{
+    padding: 4vw 5vw 4vw 5vw;
+}
+
+.roots-img{
+    height: 40vw;
+    width: auto;
+    filter: drop-shadow(0px 0px 10px black);
+}
+
+.roots-txt{
+    font-size: 4vw;
+    font-weight: 700;
+    margin-bottom: 4vw;
+}
+
+.roots-sub{
+    font-size: 1.4vw;
+    font-weight: 400;
+    margin-bottom: 2vw;
+}
+
+.vd-touch{
+    justify-content: space-around;
+    padding: 2vw;
+    flex-basis: 80%;
+    
+}
+.touch-txt{
+    font-size: 3vw;
+    font-weight: 700;
+    margin-bottom: 3vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+.touch-sub{
+    font-size: 1.4vw;
+    font-weight: 400;
+    margin-bottom: 2vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+.vd-pf{
+    display: inline-flex;
+    justify-content: space-around;
+    padding: 2vw;
+    flex-basis: 80%;
+    background-color: #02AFBE;
+    align-items: center;
+    filter: drop-shadow(0px 0px 20px black);
+}
+.vd-pride{
+    flex-basis: 80%;
+    text-align: center;
+    
+}
+.pride-txt{
+    font-size: 3vw;
+    font-weight: 700;
+    margin-top: 2vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    color: white;
+    
+   
+}
+.pride-sub{
+    font-size: 1.4vw;
+    font-weight: 400;
+    margin-left: 2vw;
+    margin-right: 10vw;
+    display: flex;  
+    margin-top: 3vw;
+    color: white;
+
+}
+.pride-img{
+    flex-basis: 10%;
+    display: inline-flex;
+    height: 10vw;
+    margin-top: 3vw;
+    margin-bottom: 3vw;
+}
+
+
+.vd-card{
+    flex-basis: 15%;
+    height: auto;
+    margin: 5px;
+}
+
+.vd-card img{
+    max-width: 100%;
+    max-height: 100%;
+    transition: .1s;
+}
+
+
+.vd-card img:hover{
+    transform: scale(1.1,1.1);
+}
+
+
+.vd-reviews{
+    margin: 2em;
+    display: inline-flex;
+    flex-flow: wrap;
+    align-items: center;
+}
+
+
+.review-cnt{
+    flex-basis: 80%;
+}
+
+.review-illus{
+    flex-basis: 20%;
+}
+
+.review-illus img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+
+
+.review-txt{
+    font-size: 4vw;
+    font-weight: 700;
+}
+.review-sl
+{
+    margin-top: 3vw;
+    font-size: 1.5vw;
+}
+.review-bd{
+    margin-left: 2vw;
+    margin-right: 2vw;
+    margin-top: 2vw;
+}
+.vd-testimonial{
+    width: 100%;
+    margin: 0;
+}
+
+.tst-row{
+    width: 100%;
+    margin: 0;
+    padding: 2vw;
+    justify-content: space-around;
+}
+
+.tst-img{
+    position: relative;
+    top: -2vw;
+    left: -2vw;
+    width: 10vw;
+    height: 10vw;
+    border-radius: 50%;
+    background-size: cover;
+    box-shadow: 0.5vw 0.5vw 1vw #7e7e7e7a;
+}
+
+.tst-card{
+    border: none;
+    border-radius: 1vw;
+    background-color: #02AFBE5C;
+    height: 21vw;
+    width: 18vw;
+    margin: 4vw 1vw;
+
+}
+
+.tst-body{
+    margin: 0;
+    padding: 1vw;
+}
+
+.tst-name{
+    font-size: 1.2vw;
+    font-weight: 700;
+    margin-top: -2vw;
+}
+
+.tst-com{
+    font-size: 1vw;
+    font-weight: 600;
+    opacity: 0.75;
+}
+
+.tst-txt{
+    padding-top: 0.5vw;
+    font-size: 0.9vw;
+    font-weight: 500;
+}
+
+
+/*------  About -----*/
 .vd-footer{
     background-color: var(--primary);
     width: 100%;
