--- a/style.css
+++ b/style.css
@@ -583,31 +583,27 @@ body{
 .cl-detail{
     display: flex;
     flex-flow: column;
-    justify-content: left;
-    width: 30%;
+    justify-content: space-around;
+    width: 50%;
     word-break: break-all;
     padding: 20px;
 
 }
 .cl-clients{
     background-color: #DCF3F5;
-    height: 900px;
+    /* height: 900px; */
     display: flex;
+    justify-content: space-evenly;
     flex-flow: column;
     padding: 20px;
-    
 }
 .cl-clcards{
-    margin: 2em;
     display: flex;
     flex-flow: wrap;
     justify-content: center;
-    padding: 20px;
-
-
 }
 .cl-logo{
-    flex-basis: 15%;
+    flex-basis: 10%;
     height: auto;
     margin: 40px;
 }
@@ -621,6 +617,16 @@ body{
 
 .cl-logo img:hover{
     transform: scale(1.1,1.1);
+}
+
+.cl-view{
+    background-color: var(--secondary);
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px;
+    border: none;
+    width: 110px;
 }
 
 
